@@ -97,6 +97,11 @@
 			%has_staged -> git commit -v
 			!%has_staged -> git commit -v %files
 		---
+
+		commit-fix <<---
+			`git branch -r --contains HEAD` -> ! Cannot fix last commit; it has already been pushed.
+			git commit -v --amend
+		---
 	</commands>
 
 </git>
